// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden import — commitFolderImport (wizard path) > the same Dwarf tree via the folder wizard — records the cross-path shape (Med-1) 1`] = `
{
  "files": [
    {
      "bytes": 26,
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits",
    },
    {
      "bytes": 21,
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
    },
    {
      "bytes": 21,
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
    },
  ],
  "latestHistory": {
    "bytesNew": 68,
    "bytesTotal": 68,
    "cancelled": 0,
    "error": null,
    "files": "["M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits","M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg","M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg"]",
    "filesTotal": 3,
    "manual": 1,
    "newFiles": 3,
    "objectsTotal": 1,
    "objectsTouched": "[{"objectId":"M42","name":"M42","isNew":true}]",
    "sessionsTouched": "[{"objectId":"M42","objectName":"M42","date":"2026-08-01","isNew":true}]",
    "skipped": "[{"reason":"sub-frames-disabled","label":"sub-frames, because \\"Include subframes\\" is off","count":1,"bytes":19,"samples":["DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/001-DWARF3_M42_2026-08-01_21-00-15-000.fits"]}]",
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": null,
  },
  "libraryDeletedSessions": [],
  "libraryFiles": [
    {
      "bytes": 26,
      "captureDate": "2026-08-01",
      "captureTime": "210000",
      "fileName": "DWARF3_M42_2026-08-01_21-00-00-000.fits",
      "objectId": "M42",
      "originalName": "DWARF3_M42_2026-08-01_21-00-00-000.fits",
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits",
      "telescopeId": null,
    },
    {
      "bytes": 21,
      "captureDate": "2026-08-01",
      "captureTime": "210000",
      "fileName": "DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "objectId": "M42",
      "originalName": "DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "telescopeId": null,
    },
    {
      "bytes": 21,
      "captureDate": "2026-08-01",
      "captureTime": null,
      "fileName": "stacked.jpg",
      "objectId": "M42",
      "originalName": "stacked.jpg",
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
      "role": "preview",
      "sessionDateOverride": null,
      "sourcePath": "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
      "telescopeId": null,
    },
  ],
  "libraryObjects": [
    {
      "catalogId": "M42",
      "constellation": "Orion",
      "dec": "-05° 23′ 23″",
      "deleted": 0,
      "description": "The Orion Nebula is the closest large star-forming region to Earth at about 1,344 light-years, and the brightest emission nebula in the sky, faintly visible to the unaided eye as the middle star of Orion's sword. At its heart the Trapezium, a tight cluster of four hot, massive stars, floods the surrounding 24 light-year-wide cloud with ultraviolet radiation. Hubble Space Telescope observations have revealed hundreds of protoplanetary disks and newborn stars still cocooned in gas and dust throughout the nebula.",
      "distanceLy": 1344,
      "fileCount": 3,
      "folderName": "M42",
      "galleryImageUserSet": 0,
      "layout": "nested",
      "magnitude": 4,
      "objectId": "M42",
      "objectName": "Orion Nebula",
      "objectType": "Emission/Reflection Nebula",
      "primaryTelescopeId": null,
      "ra": "05h 35m 16.5s",
      "sizeArcmin": null,
      "wikiUrl": null,
    },
  ],
  "librarySessions": [
    {
      "coordsResolved": 1,
      "date": "2026-08-01",
      "lat": null,
      "lon": null,
      "objectId": "M42",
      "sessionImage": null,
      "siteId": null,
      "telescopeId": null,
    },
  ],
  "status": {
    "bytesDone": 0,
    "bytesTotal": 68,
    "cancelled": false,
    "currentObject": null,
    "currentObjectFilesDone": 0,
    "currentObjectFilesTotal": 0,
    "error": null,
    "filesDone": 3,
    "filesTotal": 3,
    "manual": true,
    "objectsDone": 1,
    "objectsTotal": 1,
    "running": false,
    "skipped": [
      {
        "bytes": 19,
        "count": 1,
        "label": "sub-frames, because "Include subframes" is off",
        "reason": "sub-frames-disabled",
        "samples": [
          "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/001-DWARF3_M42_2026-08-01_21-00-15-000.fits",
        ],
      },
    ],
    "skippedFiles": 0,
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": null,
    "warmingThumbnails": null,
  },
}
`;

exports[`golden import — runImport (live telescope path) > asiairLayout is stable and idempotent 1`] = `
{
  "files": [
    {
      "bytes": 14,
      "relPath": "M42/2024-03-20_00-00-00/Light_M42_10.0s_Bin1_S_gain360_20240320-203324_-10.0C_0001.fit",
    },
    {
      "bytes": 14,
      "relPath": "M42/2024-03-20_00-00-00/Light_M42_10.0s_Bin1_S_gain360_20240320-203424_-10.0C_0002.fit",
    },
    {
      "bytes": 17,
      "relPath": "M42/2024-03-20_00-00-00/Light_M42_300.0s_Bin1_Ha_gain100_20240321-013000_-10.0C_0001.fit",
    },
    {
      "bytes": 17,
      "relPath": "M42/Live_Stack_M42.fit",
    },
    {
      "bytes": 11,
      "relPath": "_archive/TELESCOPE_ID/Autorun/Dark/Dark_60s_Bin1_20240320-235959_0018.fit",
    },
    {
      "bytes": 11,
      "relPath": "_archive/TELESCOPE_ID/Autorun/Flat/Flat_1.0ms_Bin1_S_gain100_20240320-233122_-10.5C_0001.fit",
    },
  ],
  "latestHistory": {
    "bytesNew": 62,
    "bytesTotal": 62,
    "cancelled": 0,
    "error": null,
    "files": "["M42/2024-03-20_00-00-00/Light_M42_10.0s_Bin1_S_gain360_20240320-203324_-10.0C_0001.fit","M42/2024-03-20_00-00-00/Light_M42_10.0s_Bin1_S_gain360_20240320-203424_-10.0C_0002.fit","M42/2024-03-20_00-00-00/Light_M42_300.0s_Bin1_Ha_gain100_20240321-013000_-10.0C_0001.fit","M42/Live_Stack_M42.fit"]",
    "filesTotal": 4,
    "manual": 0,
    "newFiles": 4,
    "objectsTotal": 1,
    "objectsTouched": "[{"objectId":"M42","name":"M42","isNew":true}]",
    "sessionsTouched": "[{"objectId":"M42","objectName":"M42","date":"2024-03-20","isNew":true}]",
    "skipped": null,
    "telescopeId": "TELESCOPE_ID",
    "telescopeName": "Golden Scope",
    "transportKind": "local",
  },
  "libraryDeletedSessions": [],
  "libraryFiles": [
    {
      "bytes": 14,
      "captureDate": "2024-03-20",
      "captureTime": "203324",
      "fileName": "Light_M42_10.0s_Bin1_S_gain360_20240320-203324_-10.0C_0001.fit",
      "objectId": "M42",
      "originalName": "Light_M42_10.0s_Bin1_S_gain360_20240320-203324_-10.0C_0001.fit",
      "relPath": "M42/2024-03-20_00-00-00/Light_M42_10.0s_Bin1_S_gain360_20240320-203324_-10.0C_0001.fit",
      "role": "sub",
      "sessionDateOverride": null,
      "sourcePath": "Autorun/Light/M42/Light_M42_10.0s_Bin1_S_gain360_20240320-203324_-10.0C_0001.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 14,
      "captureDate": "2024-03-20",
      "captureTime": "203424",
      "fileName": "Light_M42_10.0s_Bin1_S_gain360_20240320-203424_-10.0C_0002.fit",
      "objectId": "M42",
      "originalName": "Light_M42_10.0s_Bin1_S_gain360_20240320-203424_-10.0C_0002.fit",
      "relPath": "M42/2024-03-20_00-00-00/Light_M42_10.0s_Bin1_S_gain360_20240320-203424_-10.0C_0002.fit",
      "role": "sub",
      "sessionDateOverride": null,
      "sourcePath": "Autorun/Light/M42/Light_M42_10.0s_Bin1_S_gain360_20240320-203424_-10.0C_0002.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 17,
      "captureDate": "2024-03-21",
      "captureTime": "013000",
      "fileName": "Light_M42_300.0s_Bin1_Ha_gain100_20240321-013000_-10.0C_0001.fit",
      "objectId": "M42",
      "originalName": "Light_M42_300.0s_Bin1_Ha_gain100_20240321-013000_-10.0C_0001.fit",
      "relPath": "M42/2024-03-20_00-00-00/Light_M42_300.0s_Bin1_Ha_gain100_20240321-013000_-10.0C_0001.fit",
      "role": "sub",
      "sessionDateOverride": null,
      "sourcePath": "Plan/Light/M42/Light_M42_300.0s_Bin1_Ha_gain100_20240321-013000_-10.0C_0001.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 17,
      "captureDate": null,
      "captureTime": null,
      "fileName": "Live_Stack_M42.fit",
      "objectId": "M42",
      "originalName": "Live_Stack_M42.fit",
      "relPath": "M42/Live_Stack_M42.fit",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "Live/M42/Live_Stack_M42.fit",
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "libraryObjects": [
    {
      "catalogId": "M42",
      "constellation": "Orion",
      "dec": "-05° 23′ 23″",
      "deleted": 0,
      "description": "The Orion Nebula is the closest large star-forming region to Earth at about 1,344 light-years, and the brightest emission nebula in the sky, faintly visible to the unaided eye as the middle star of Orion's sword. At its heart the Trapezium, a tight cluster of four hot, massive stars, floods the surrounding 24 light-year-wide cloud with ultraviolet radiation. Hubble Space Telescope observations have revealed hundreds of protoplanetary disks and newborn stars still cocooned in gas and dust throughout the nebula.",
      "distanceLy": 1344,
      "fileCount": 4,
      "folderName": "M42",
      "galleryImageUserSet": 0,
      "layout": "nested",
      "magnitude": 4,
      "objectId": "M42",
      "objectName": "Orion Nebula",
      "objectType": "Emission/Reflection Nebula",
      "primaryTelescopeId": "TELESCOPE_ID",
      "ra": "05h 35m 16.5s",
      "sizeArcmin": null,
      "wikiUrl": null,
    },
  ],
  "librarySessions": [
    {
      "coordsResolved": 1,
      "date": "2024-03-20",
      "lat": null,
      "lon": null,
      "objectId": "M42",
      "sessionImage": null,
      "siteId": null,
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "status": {
    "bytesDone": 62,
    "bytesTotal": 62,
    "cancelled": false,
    "currentObject": null,
    "currentObjectFilesDone": 4,
    "currentObjectFilesTotal": 4,
    "error": null,
    "filesDone": 4,
    "filesTotal": 4,
    "manual": false,
    "objectsDone": 1,
    "objectsTotal": 1,
    "running": false,
    "skipped": [],
    "skippedFiles": 0,
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": "local",
    "warmingThumbnails": null,
  },
}
`;

exports[`golden import — runImport (live telescope path) > dwarfNested is stable and idempotent 1`] = `
{
  "files": [
    {
      "bytes": 21,
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
    },
    {
      "bytes": 21,
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
    },
  ],
  "latestHistory": {
    "bytesNew": 42,
    "bytesTotal": 42,
    "cancelled": 0,
    "error": null,
    "files": "["M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg","M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg"]",
    "filesTotal": 2,
    "manual": 0,
    "newFiles": 2,
    "objectsTotal": 1,
    "objectsTouched": "[{"objectId":"M42","name":"M42","isNew":true}]",
    "sessionsTouched": "[{"objectId":"M42","objectName":"M42","date":"2026-08-01","isNew":true}]",
    "skipped": "[{"reason":"sub-frames-disabled","label":"sub-frames, because \\"Include subframes\\" is off","count":2,"bytes":45,"samples":["DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/001-DWARF3_M42_2026-08-01_21-00-15-000.fits","DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits"]}]",
    "telescopeId": "TELESCOPE_ID",
    "telescopeName": "Golden Scope",
    "transportKind": "local",
  },
  "libraryDeletedSessions": [],
  "libraryFiles": [
    {
      "bytes": 21,
      "captureDate": "2026-08-01",
      "captureTime": "210000",
      "fileName": "DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "objectId": "M42",
      "originalName": "DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "Astronomy/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 21,
      "captureDate": null,
      "captureTime": null,
      "fileName": "stacked.jpg",
      "objectId": "M42",
      "originalName": "stacked.jpg",
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
      "role": "preview",
      "sessionDateOverride": "2026-08-01",
      "sourcePath": "Astronomy/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "libraryObjects": [
    {
      "catalogId": "M42",
      "constellation": "Orion",
      "dec": "-05° 23′ 23″",
      "deleted": 0,
      "description": "The Orion Nebula is the closest large star-forming region to Earth at about 1,344 light-years, and the brightest emission nebula in the sky, faintly visible to the unaided eye as the middle star of Orion's sword. At its heart the Trapezium, a tight cluster of four hot, massive stars, floods the surrounding 24 light-year-wide cloud with ultraviolet radiation. Hubble Space Telescope observations have revealed hundreds of protoplanetary disks and newborn stars still cocooned in gas and dust throughout the nebula.",
      "distanceLy": 1344,
      "fileCount": 2,
      "folderName": "M42",
      "galleryImageUserSet": 0,
      "layout": "nested",
      "magnitude": 4,
      "objectId": "M42",
      "objectName": "Orion Nebula",
      "objectType": "Emission/Reflection Nebula",
      "primaryTelescopeId": "TELESCOPE_ID",
      "ra": "05h 35m 16.5s",
      "sizeArcmin": null,
      "wikiUrl": null,
    },
  ],
  "librarySessions": [
    {
      "coordsResolved": 1,
      "date": "2026-08-01",
      "lat": null,
      "lon": null,
      "objectId": "M42",
      "sessionImage": null,
      "siteId": null,
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "status": {
    "bytesDone": 42,
    "bytesTotal": 42,
    "cancelled": false,
    "currentObject": null,
    "currentObjectFilesDone": 2,
    "currentObjectFilesTotal": 2,
    "error": null,
    "filesDone": 2,
    "filesTotal": 2,
    "manual": false,
    "objectsDone": 1,
    "objectsTotal": 1,
    "running": false,
    "skipped": [
      {
        "bytes": 45,
        "count": 2,
        "label": "sub-frames, because "Include subframes" is off",
        "reason": "sub-frames-disabled",
        "samples": [
          "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/001-DWARF3_M42_2026-08-01_21-00-15-000.fits",
          "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits",
        ],
      },
    ],
    "skippedFiles": 0,
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": "local",
    "warmingThumbnails": null,
  },
}
`;

exports[`golden import — runImport (live telescope path) > dwarfWithCalibration is stable and idempotent 1`] = `
{
  "files": [
    {
      "bytes": 21,
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
    },
    {
      "bytes": 21,
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
    },
    {
      "bytes": 12,
      "relPath": "_archive/TELESCOPE_ID/CALI_FRAME/cali_001.fits",
    },
    {
      "bytes": 12,
      "relPath": "_archive/TELESCOPE_ID/DWARF_DARK/dark_001.fits",
    },
  ],
  "latestHistory": {
    "bytesNew": 42,
    "bytesTotal": 42,
    "cancelled": 0,
    "error": null,
    "files": "["M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg","M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg"]",
    "filesTotal": 2,
    "manual": 0,
    "newFiles": 2,
    "objectsTotal": 1,
    "objectsTouched": "[{"objectId":"M42","name":"M42","isNew":true}]",
    "sessionsTouched": "[{"objectId":"M42","objectName":"M42","date":"2026-08-01","isNew":true}]",
    "skipped": "[{"reason":"sub-frames-disabled","label":"sub-frames, because \\"Include subframes\\" is off","count":2,"bytes":45,"samples":["DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/001-DWARF3_M42_2026-08-01_21-00-15-000.fits","DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits"]}]",
    "telescopeId": "TELESCOPE_ID",
    "telescopeName": "Golden Scope",
    "transportKind": "local",
  },
  "libraryDeletedSessions": [],
  "libraryFiles": [
    {
      "bytes": 21,
      "captureDate": "2026-08-01",
      "captureTime": "210000",
      "fileName": "DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "objectId": "M42",
      "originalName": "DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "Astronomy/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 21,
      "captureDate": null,
      "captureTime": null,
      "fileName": "stacked.jpg",
      "objectId": "M42",
      "originalName": "stacked.jpg",
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
      "role": "preview",
      "sessionDateOverride": "2026-08-01",
      "sourcePath": "Astronomy/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "libraryObjects": [
    {
      "catalogId": "M42",
      "constellation": "Orion",
      "dec": "-05° 23′ 23″",
      "deleted": 0,
      "description": "The Orion Nebula is the closest large star-forming region to Earth at about 1,344 light-years, and the brightest emission nebula in the sky, faintly visible to the unaided eye as the middle star of Orion's sword. At its heart the Trapezium, a tight cluster of four hot, massive stars, floods the surrounding 24 light-year-wide cloud with ultraviolet radiation. Hubble Space Telescope observations have revealed hundreds of protoplanetary disks and newborn stars still cocooned in gas and dust throughout the nebula.",
      "distanceLy": 1344,
      "fileCount": 2,
      "folderName": "M42",
      "galleryImageUserSet": 0,
      "layout": "nested",
      "magnitude": 4,
      "objectId": "M42",
      "objectName": "Orion Nebula",
      "objectType": "Emission/Reflection Nebula",
      "primaryTelescopeId": "TELESCOPE_ID",
      "ra": "05h 35m 16.5s",
      "sizeArcmin": null,
      "wikiUrl": null,
    },
  ],
  "librarySessions": [
    {
      "coordsResolved": 1,
      "date": "2026-08-01",
      "lat": null,
      "lon": null,
      "objectId": "M42",
      "sessionImage": null,
      "siteId": null,
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "status": {
    "bytesDone": 42,
    "bytesTotal": 42,
    "cancelled": false,
    "currentObject": null,
    "currentObjectFilesDone": 2,
    "currentObjectFilesTotal": 2,
    "error": null,
    "filesDone": 2,
    "filesTotal": 2,
    "manual": false,
    "objectsDone": 1,
    "objectsTotal": 1,
    "running": false,
    "skipped": [
      {
        "bytes": 45,
        "count": 2,
        "label": "sub-frames, because "Include subframes" is off",
        "reason": "sub-frames-disabled",
        "samples": [
          "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/001-DWARF3_M42_2026-08-01_21-00-15-000.fits",
          "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits",
        ],
      },
    ],
    "skippedFiles": 0,
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": "local",
    "warmingThumbnails": null,
  },
}
`;

exports[`golden import — runImport (live telescope path) > dwarfWithRestacked is stable and idempotent 1`] = `
{
  "files": [
    {
      "bytes": 21,
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
    },
    {
      "bytes": 21,
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
    },
    {
      "bytes": 25,
      "relPath": "M42/processed/megastack.jpg",
    },
    {
      "bytes": 25,
      "relPath": "RESTACKED/M42/stacked_thumbnail.jpg",
    },
  ],
  "latestHistory": {
    "bytesNew": 42,
    "bytesTotal": 42,
    "cancelled": 0,
    "error": null,
    "files": "["M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg","M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg"]",
    "filesTotal": 2,
    "manual": 0,
    "newFiles": 2,
    "objectsTotal": 1,
    "objectsTouched": "[{"objectId":"M42","name":"M42","isNew":true}]",
    "sessionsTouched": "[{"objectId":"M42","objectName":"M42","date":"2026-08-01","isNew":true}]",
    "skipped": "[{"reason":"sub-frames-disabled","label":"sub-frames, because \\"Include subframes\\" is off","count":2,"bytes":45,"samples":["DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/001-DWARF3_M42_2026-08-01_21-00-15-000.fits","DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits"]}]",
    "telescopeId": "TELESCOPE_ID",
    "telescopeName": "Golden Scope",
    "transportKind": "local",
  },
  "libraryDeletedSessions": [],
  "libraryFiles": [
    {
      "bytes": 21,
      "captureDate": "2026-08-01",
      "captureTime": "210000",
      "fileName": "DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "objectId": "M42",
      "originalName": "DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "Astronomy/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 21,
      "captureDate": null,
      "captureTime": null,
      "fileName": "stacked.jpg",
      "objectId": "M42",
      "originalName": "stacked.jpg",
      "relPath": "M42/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
      "role": "preview",
      "sessionDateOverride": "2026-08-01",
      "sourcePath": "Astronomy/DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/stacked.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "libraryObjects": [
    {
      "catalogId": "M42",
      "constellation": "Orion",
      "dec": "-05° 23′ 23″",
      "deleted": 0,
      "description": "The Orion Nebula is the closest large star-forming region to Earth at about 1,344 light-years, and the brightest emission nebula in the sky, faintly visible to the unaided eye as the middle star of Orion's sword. At its heart the Trapezium, a tight cluster of four hot, massive stars, floods the surrounding 24 light-year-wide cloud with ultraviolet radiation. Hubble Space Telescope observations have revealed hundreds of protoplanetary disks and newborn stars still cocooned in gas and dust throughout the nebula.",
      "distanceLy": 1344,
      "fileCount": 2,
      "folderName": "M42",
      "galleryImageUserSet": 0,
      "layout": "nested",
      "magnitude": 4,
      "objectId": "M42",
      "objectName": "Orion Nebula",
      "objectType": "Emission/Reflection Nebula",
      "primaryTelescopeId": "TELESCOPE_ID",
      "ra": "05h 35m 16.5s",
      "sizeArcmin": null,
      "wikiUrl": null,
    },
  ],
  "librarySessions": [
    {
      "coordsResolved": 1,
      "date": "2026-08-01",
      "lat": null,
      "lon": null,
      "objectId": "M42",
      "sessionImage": null,
      "siteId": null,
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "status": {
    "bytesDone": 42,
    "bytesTotal": 42,
    "cancelled": false,
    "currentObject": null,
    "currentObjectFilesDone": 2,
    "currentObjectFilesTotal": 2,
    "error": null,
    "filesDone": 2,
    "filesTotal": 2,
    "manual": false,
    "objectsDone": 1,
    "objectsTotal": 1,
    "running": false,
    "skipped": [
      {
        "bytes": 45,
        "count": 2,
        "label": "sub-frames, because "Include subframes" is off",
        "reason": "sub-frames-disabled",
        "samples": [
          "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/001-DWARF3_M42_2026-08-01_21-00-15-000.fits",
          "DWARF3_RAW_M42_EXP_30_GAIN_80_2026-08-01_21-00-00-000/DWARF3_M42_2026-08-01_21-00-00-000.fits",
        ],
      },
    ],
    "skippedFiles": 0,
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": "local",
    "warmingThumbnails": null,
  },
}
`;

exports[`golden import — runImport (live telescope path) > genericSmbLayout is stable and idempotent 1`] = `
{
  "files": [
    {
      "bytes": 13,
      "relPath": "M31/2026-04-26_2030/M31_001.fit",
    },
    {
      "bytes": 13,
      "relPath": "M31/2026-04-26_2030/M31_002.fit",
    },
    {
      "bytes": 26,
      "relPath": "M31/2026-04-26_2030/M31_stacked.fit",
    },
    {
      "bytes": 25,
      "relPath": "M31/2026-04-26_2030/M31_stacked.jpg",
    },
    {
      "bytes": 58,
      "relPath": "M31/2026-04-26_2030/meta.json",
    },
  ],
  "latestHistory": {
    "bytesNew": 135,
    "bytesTotal": 135,
    "cancelled": 0,
    "error": null,
    "files": "["M31/2026-04-26_2030/M31_001.fit","M31/2026-04-26_2030/M31_002.fit","M31/2026-04-26_2030/M31_stacked.fit","M31/2026-04-26_2030/M31_stacked.jpg","M31/2026-04-26_2030/meta.json"]",
    "filesTotal": 5,
    "manual": 0,
    "newFiles": 5,
    "objectsTotal": 1,
    "objectsTouched": "[{"objectId":"M31","name":"M31","isNew":true}]",
    "sessionsTouched": "[{"objectId":"M31","objectName":"M31","date":"2026-04-26","isNew":true}]",
    "skipped": null,
    "telescopeId": "TELESCOPE_ID",
    "telescopeName": "Golden Scope",
    "transportKind": "local",
  },
  "libraryDeletedSessions": [],
  "libraryFiles": [
    {
      "bytes": 13,
      "captureDate": null,
      "captureTime": null,
      "fileName": "M31_001.fit",
      "objectId": "M31",
      "originalName": "M31_001.fit",
      "relPath": "M31/2026-04-26_2030/M31_001.fit",
      "role": "sub",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/subframes/M31_001.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 13,
      "captureDate": null,
      "captureTime": null,
      "fileName": "M31_002.fit",
      "objectId": "M31",
      "originalName": "M31_002.fit",
      "relPath": "M31/2026-04-26_2030/M31_002.fit",
      "role": "sub",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/subframes/M31_002.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 26,
      "captureDate": null,
      "captureTime": null,
      "fileName": "M31_stacked.fit",
      "objectId": "M31",
      "originalName": "M31_stacked.fit",
      "relPath": "M31/2026-04-26_2030/M31_stacked.fit",
      "role": "stacked",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/lights/M31_stacked.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 25,
      "captureDate": null,
      "captureTime": null,
      "fileName": "M31_stacked.jpg",
      "objectId": "M31",
      "originalName": "M31_stacked.jpg",
      "relPath": "M31/2026-04-26_2030/M31_stacked.jpg",
      "role": "preview",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/lights/M31_stacked.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 58,
      "captureDate": null,
      "captureTime": null,
      "fileName": "meta.json",
      "objectId": "M31",
      "originalName": "meta.json",
      "relPath": "M31/2026-04-26_2030/meta.json",
      "role": "metadata",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/meta.json",
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "libraryObjects": [
    {
      "catalogId": "M31",
      "constellation": "Andromeda",
      "dec": "+41° 16′ 09″",
      "deleted": 0,
      "description": "The Andromeda Galaxy is the nearest large spiral galaxy to the Milky Way, sitting 2.537 million light-years away in Andromeda and spanning about 220,000 light-years in diameter. Containing roughly one trillion stars, it is the most distant object visible to the naked eye under dark skies. It is on a slow collision course with our galaxy and the two are expected to merge in about 4.5 billion years.",
      "distanceLy": 2537000,
      "fileCount": 5,
      "folderName": "M31",
      "galleryImageUserSet": 0,
      "layout": "nested",
      "magnitude": 3.44,
      "objectId": "M31",
      "objectName": "Andromeda Galaxy",
      "objectType": "Spiral Galaxy",
      "primaryTelescopeId": "TELESCOPE_ID",
      "ra": "00h 42m 44.3s",
      "sizeArcmin": null,
      "wikiUrl": null,
    },
  ],
  "librarySessions": [
    {
      "coordsResolved": 1,
      "date": "2026-04-26",
      "lat": null,
      "lon": null,
      "objectId": "M31",
      "sessionImage": null,
      "siteId": null,
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "status": {
    "bytesDone": 135,
    "bytesTotal": 135,
    "cancelled": false,
    "currentObject": null,
    "currentObjectFilesDone": 5,
    "currentObjectFilesTotal": 5,
    "error": null,
    "filesDone": 5,
    "filesTotal": 5,
    "manual": false,
    "objectsDone": 1,
    "objectsTotal": 1,
    "running": false,
    "skipped": [],
    "skippedFiles": 0,
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": "local",
    "warmingThumbnails": null,
  },
}
`;

exports[`golden import — runImport (live telescope path) > seestarFlat is stable and idempotent 1`] = `
{
  "files": [
    {
      "bytes": 29,
      "relPath": "M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
    },
    {
      "bytes": 23,
      "relPath": "M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
    },
  ],
  "latestHistory": {
    "bytesNew": 52,
    "bytesTotal": 52,
    "cancelled": 0,
    "error": null,
    "files": "["M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit","M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg"]",
    "filesTotal": 2,
    "manual": 0,
    "newFiles": 2,
    "objectsTotal": 1,
    "objectsTouched": "[{"objectId":"M42","name":"M42","isNew":true}]",
    "sessionsTouched": "[{"objectId":"M42","objectName":"M42","date":"2026-04-07","isNew":true}]",
    "skipped": "[{"reason":"thumbnails-disabled","label":"thumbnails, because thumbnail import is off","count":1,"bytes":5,"samples":["Stacked_30_M42_10.0s_IRCUT_20260407-210000_thn.jpg"]}]",
    "telescopeId": "TELESCOPE_ID",
    "telescopeName": "Golden Scope",
    "transportKind": "local",
  },
  "libraryDeletedSessions": [],
  "libraryFiles": [
    {
      "bytes": 29,
      "captureDate": "2026-04-07",
      "captureTime": "210000",
      "fileName": "Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
      "objectId": "M42",
      "originalName": "Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
      "relPath": "M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "MyWorks/M42/Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 23,
      "captureDate": "2026-04-07",
      "captureTime": "210000",
      "fileName": "Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
      "objectId": "M42",
      "originalName": "Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
      "relPath": "M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "MyWorks/M42/Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "libraryObjects": [
    {
      "catalogId": "M42",
      "constellation": "Orion",
      "dec": "-05° 23′ 23″",
      "deleted": 0,
      "description": "The Orion Nebula is the closest large star-forming region to Earth at about 1,344 light-years, and the brightest emission nebula in the sky, faintly visible to the unaided eye as the middle star of Orion's sword. At its heart the Trapezium, a tight cluster of four hot, massive stars, floods the surrounding 24 light-year-wide cloud with ultraviolet radiation. Hubble Space Telescope observations have revealed hundreds of protoplanetary disks and newborn stars still cocooned in gas and dust throughout the nebula.",
      "distanceLy": 1344,
      "fileCount": 2,
      "folderName": "M42",
      "galleryImageUserSet": 0,
      "layout": "nested",
      "magnitude": 4,
      "objectId": "M42",
      "objectName": "Orion Nebula",
      "objectType": "Emission/Reflection Nebula",
      "primaryTelescopeId": "TELESCOPE_ID",
      "ra": "05h 35m 16.5s",
      "sizeArcmin": null,
      "wikiUrl": null,
    },
  ],
  "librarySessions": [
    {
      "coordsResolved": 1,
      "date": "2026-04-07",
      "lat": null,
      "lon": null,
      "objectId": "M42",
      "sessionImage": null,
      "siteId": null,
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "status": {
    "bytesDone": 52,
    "bytesTotal": 52,
    "cancelled": false,
    "currentObject": null,
    "currentObjectFilesDone": 2,
    "currentObjectFilesTotal": 2,
    "error": null,
    "filesDone": 2,
    "filesTotal": 2,
    "manual": false,
    "objectsDone": 1,
    "objectsTotal": 1,
    "running": false,
    "skipped": [
      {
        "bytes": 5,
        "count": 1,
        "label": "thumbnails, because thumbnail import is off",
        "reason": "thumbnails-disabled",
        "samples": [
          "Stacked_30_M42_10.0s_IRCUT_20260407-210000_thn.jpg",
        ],
      },
    ],
    "skippedFiles": 0,
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": "local",
    "warmingThumbnails": null,
  },
}
`;

exports[`golden import — runImport (live telescope path) > seestarWithSubFolder is stable and idempotent 1`] = `
{
  "files": [
    {
      "bytes": 29,
      "relPath": "M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
    },
    {
      "bytes": 23,
      "relPath": "M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
    },
    {
      "bytes": 13,
      "relPath": "M42/2026-04-07_00-00-00/sub_00001_M42_10.0s_IRCUT_20260407-205500.fit",
    },
    {
      "bytes": 13,
      "relPath": "M42/2026-04-07_00-00-00/sub_00002_M42_10.0s_IRCUT_20260407-205530.fit",
    },
  ],
  "latestHistory": {
    "bytesNew": 78,
    "bytesTotal": 78,
    "cancelled": 0,
    "error": null,
    "files": "["M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit","M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg","M42/2026-04-07_00-00-00/sub_00001_M42_10.0s_IRCUT_20260407-205500.fit","M42/2026-04-07_00-00-00/sub_00002_M42_10.0s_IRCUT_20260407-205530.fit"]",
    "filesTotal": 4,
    "manual": 0,
    "newFiles": 4,
    "objectsTotal": 1,
    "objectsTouched": "[{"objectId":"M42","name":"M42","isNew":true}]",
    "sessionsTouched": "[{"objectId":"M42","objectName":"M42","date":"2026-04-07","isNew":true}]",
    "skipped": "[{"reason":"thumbnails-disabled","label":"thumbnails, because thumbnail import is off","count":1,"bytes":5,"samples":["Stacked_30_M42_10.0s_IRCUT_20260407-210000_thn.jpg"]}]",
    "telescopeId": "TELESCOPE_ID",
    "telescopeName": "Golden Scope",
    "transportKind": "local",
  },
  "libraryDeletedSessions": [],
  "libraryFiles": [
    {
      "bytes": 29,
      "captureDate": "2026-04-07",
      "captureTime": "210000",
      "fileName": "Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
      "objectId": "M42",
      "originalName": "Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
      "relPath": "M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "MyWorks/M42/Stacked_30_M42_10.0s_IRCUT_20260407-210000.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 23,
      "captureDate": "2026-04-07",
      "captureTime": "210000",
      "fileName": "Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
      "objectId": "M42",
      "originalName": "Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
      "relPath": "M42/2026-04-07_00-00-00/Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
      "role": "stacked",
      "sessionDateOverride": null,
      "sourcePath": "MyWorks/M42/Stacked_30_M42_10.0s_IRCUT_20260407-210000.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 13,
      "captureDate": "2026-04-07",
      "captureTime": "205500",
      "fileName": "sub_00001_M42_10.0s_IRCUT_20260407-205500.fit",
      "objectId": "M42",
      "originalName": "sub_00001_M42_10.0s_IRCUT_20260407-205500.fit",
      "relPath": "M42/2026-04-07_00-00-00/sub_00001_M42_10.0s_IRCUT_20260407-205500.fit",
      "role": "sub",
      "sessionDateOverride": null,
      "sourcePath": "MyWorks/M42_sub/sub_00001_M42_10.0s_IRCUT_20260407-205500.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 13,
      "captureDate": "2026-04-07",
      "captureTime": "205530",
      "fileName": "sub_00002_M42_10.0s_IRCUT_20260407-205530.fit",
      "objectId": "M42",
      "originalName": "sub_00002_M42_10.0s_IRCUT_20260407-205530.fit",
      "relPath": "M42/2026-04-07_00-00-00/sub_00002_M42_10.0s_IRCUT_20260407-205530.fit",
      "role": "sub",
      "sessionDateOverride": null,
      "sourcePath": "MyWorks/M42_sub/sub_00002_M42_10.0s_IRCUT_20260407-205530.fit",
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "libraryObjects": [
    {
      "catalogId": "M42",
      "constellation": "Orion",
      "dec": "-05° 23′ 23″",
      "deleted": 0,
      "description": "The Orion Nebula is the closest large star-forming region to Earth at about 1,344 light-years, and the brightest emission nebula in the sky, faintly visible to the unaided eye as the middle star of Orion's sword. At its heart the Trapezium, a tight cluster of four hot, massive stars, floods the surrounding 24 light-year-wide cloud with ultraviolet radiation. Hubble Space Telescope observations have revealed hundreds of protoplanetary disks and newborn stars still cocooned in gas and dust throughout the nebula.",
      "distanceLy": 1344,
      "fileCount": 4,
      "folderName": "M42",
      "galleryImageUserSet": 0,
      "layout": "nested",
      "magnitude": 4,
      "objectId": "M42",
      "objectName": "Orion Nebula",
      "objectType": "Emission/Reflection Nebula",
      "primaryTelescopeId": "TELESCOPE_ID",
      "ra": "05h 35m 16.5s",
      "sizeArcmin": null,
      "wikiUrl": null,
    },
  ],
  "librarySessions": [
    {
      "coordsResolved": 1,
      "date": "2026-04-07",
      "lat": null,
      "lon": null,
      "objectId": "M42",
      "sessionImage": null,
      "siteId": null,
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "status": {
    "bytesDone": 78,
    "bytesTotal": 78,
    "cancelled": false,
    "currentObject": null,
    "currentObjectFilesDone": 4,
    "currentObjectFilesTotal": 4,
    "error": null,
    "filesDone": 4,
    "filesTotal": 4,
    "manual": false,
    "objectsDone": 1,
    "objectsTotal": 1,
    "running": false,
    "skipped": [
      {
        "bytes": 5,
        "count": 1,
        "label": "thumbnails, because thumbnail import is off",
        "reason": "thumbnails-disabled",
        "samples": [
          "Stacked_30_M42_10.0s_IRCUT_20260407-210000_thn.jpg",
        ],
      },
    ],
    "skippedFiles": 0,
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": "local",
    "warmingThumbnails": null,
  },
}
`;

exports[`golden import — syncSessionSubFrames > generic SMB session sub-frame pull is stable and idempotent 1`] = `
{
  "files": [
    {
      "bytes": 13,
      "relPath": "M31/2026-04-26_2030/M31_001.fit",
    },
    {
      "bytes": 13,
      "relPath": "M31/2026-04-26_2030/M31_002.fit",
    },
    {
      "bytes": 26,
      "relPath": "M31/2026-04-26_2030/M31_stacked.fit",
    },
    {
      "bytes": 25,
      "relPath": "M31/2026-04-26_2030/M31_stacked.jpg",
    },
    {
      "bytes": 58,
      "relPath": "M31/2026-04-26_2030/meta.json",
    },
  ],
  "latestHistory": {
    "bytesNew": 26,
    "bytesTotal": 0,
    "cancelled": 0,
    "error": null,
    "files": "["M31/2026-04-26_2030/M31_001.fit","M31/2026-04-26_2030/M31_002.fit"]",
    "filesTotal": 2,
    "manual": 1,
    "newFiles": 2,
    "objectsTotal": 1,
    "objectsTouched": "[{"objectId":"M31","name":"M31","isNew":false}]",
    "sessionsTouched": "[{"objectId":"M31","objectName":"M31","date":"2026-04-26","isNew":false}]",
    "skipped": null,
    "telescopeId": "TELESCOPE_ID",
    "telescopeName": "Golden Scope",
    "transportKind": "local",
  },
  "libraryDeletedSessions": [],
  "libraryFiles": [
    {
      "bytes": 13,
      "captureDate": null,
      "captureTime": null,
      "fileName": "M31_001.fit",
      "objectId": "M31",
      "originalName": "M31_001.fit",
      "relPath": "M31/2026-04-26_2030/M31_001.fit",
      "role": "sub",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/subframes/M31_001.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 13,
      "captureDate": null,
      "captureTime": null,
      "fileName": "M31_002.fit",
      "objectId": "M31",
      "originalName": "M31_002.fit",
      "relPath": "M31/2026-04-26_2030/M31_002.fit",
      "role": "sub",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/subframes/M31_002.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 26,
      "captureDate": null,
      "captureTime": null,
      "fileName": "M31_stacked.fit",
      "objectId": "M31",
      "originalName": "M31_stacked.fit",
      "relPath": "M31/2026-04-26_2030/M31_stacked.fit",
      "role": "stacked",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/lights/M31_stacked.fit",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 25,
      "captureDate": null,
      "captureTime": null,
      "fileName": "M31_stacked.jpg",
      "objectId": "M31",
      "originalName": "M31_stacked.jpg",
      "relPath": "M31/2026-04-26_2030/M31_stacked.jpg",
      "role": "preview",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/lights/M31_stacked.jpg",
      "telescopeId": "TELESCOPE_ID",
    },
    {
      "bytes": 58,
      "captureDate": null,
      "captureTime": null,
      "fileName": "meta.json",
      "objectId": "M31",
      "originalName": "meta.json",
      "relPath": "M31/2026-04-26_2030/meta.json",
      "role": "metadata",
      "sessionDateOverride": "2026-04-26",
      "sourcePath": "M31/2026-04-26_2030/meta.json",
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "libraryObjects": [
    {
      "catalogId": "M31",
      "constellation": "Andromeda",
      "dec": "+41° 16′ 09″",
      "deleted": 0,
      "description": "The Andromeda Galaxy is the nearest large spiral galaxy to the Milky Way, sitting 2.537 million light-years away in Andromeda and spanning about 220,000 light-years in diameter. Containing roughly one trillion stars, it is the most distant object visible to the naked eye under dark skies. It is on a slow collision course with our galaxy and the two are expected to merge in about 4.5 billion years.",
      "distanceLy": 2537000,
      "fileCount": 5,
      "folderName": "M31",
      "galleryImageUserSet": 0,
      "layout": "nested",
      "magnitude": 3.44,
      "objectId": "M31",
      "objectName": "Andromeda Galaxy",
      "objectType": "Spiral Galaxy",
      "primaryTelescopeId": "TELESCOPE_ID",
      "ra": "00h 42m 44.3s",
      "sizeArcmin": null,
      "wikiUrl": null,
    },
  ],
  "librarySessions": [
    {
      "coordsResolved": 1,
      "date": "2026-04-26",
      "lat": null,
      "lon": null,
      "objectId": "M31",
      "sessionImage": null,
      "siteId": null,
      "telescopeId": "TELESCOPE_ID",
    },
  ],
  "status": {
    "bytesDone": 0,
    "bytesTotal": 0,
    "cancelled": false,
    "currentObject": null,
    "currentObjectFilesDone": 0,
    "currentObjectFilesTotal": 0,
    "error": null,
    "filesDone": 2,
    "filesErrored": 0,
    "filesTotal": 2,
    "manual": true,
    "objectsDone": 1,
    "objectsTotal": 1,
    "running": false,
    "skipped": [],
    "skippedFiles": 0,
    "telescopeId": null,
    "telescopeName": null,
    "transportKind": "local",
    "warmingThumbnails": null,
  },
}
`;
